gcc/testsuite/rust/rustc/ui/parser/suggest-removing-semicolon-after-impl-trait-items_dg.rs
//@ run-rustfix
#![allow(dead_code)]

trait Foo {
    fn bar() {}; // { dg-error "" "" { target *-*-* } }
}

fn main() {}

